Blender crashes when changing mesh data block and switching scenes #82952

Closed
opened 2020-11-23 19:56:02 +01:00 by Felipe Arioli Valduga · 10 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GTX2070 Super

Blender Version
Broken: Blender 2.90.1
Broken: Blender 2.83.6
Worked: Blender 2.83.5

Caused by 33ac3582bb

  • Open blender with default scene
  • Create a new empty scene
  • Add a cone object in the new scene
  • Change mesh data block to cube (from original scene)
  • Tab to edit mode and move any edge/face (leave in EDIT MODE)
  • In scenes pull down menu, try to go back to first scene.

INSTANT CRASH to desktop.

**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX2070 Super **Blender Version** Broken: Blender 2.90.1 Broken: Blender 2.83.6 Worked: Blender 2.83.5 Caused by 33ac3582bb - Open blender with default scene - Create a new empty scene - Add a cone object in the new scene - Change mesh data block to cube (from original scene) - Tab to edit mode and move any edge/face (leave in EDIT MODE) - In scenes pull down menu, try to go back to first scene. INSTANT CRASH to desktop.

Added subscriber: @fvalduga

Added subscriber: @fvalduga

Added subscriber: @erik85

Added subscriber: @erik85

Can confirm. This can also be triggered by

  1. Put the default cube in edit mode
  2. Create a new scene
  3. Create a new object and change the mesh to the one in edit mode in the other scene.
Can confirm. This can also be triggered by 1. Put the default cube in edit mode 2. Create a new scene 3. Create a new object and change the mesh to the one in edit mode in the other scene.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Will check

Will check
Member

Caused by 33ac3582bb

me->edit_mesh->mesh_eval_final is NULL

1  DRW_mesh_batch_cache_create_requested draw_cache_impl_mesh.c 1331 0x3bc92c5 
2  drw_batch_cache_generate_requested    draw_cache.c           3583 0x3bb6fa9 
3  drw_engines_cache_populate            draw_manager.c         1091 0x3b4213b 
4  DRW_draw_render_loop_ex               draw_manager.c         1584 0x3b4359b 
5  DRW_draw_view                         draw_manager.c         1491 0x3b43158 
6  view3d_draw_view                      view3d_draw.c          1595 0x47e3d13 
7  view3d_main_region_draw               view3d_draw.c          1617 0x47e3dba 
8  ED_region_do_draw                     area.c                 546  0x411fb9f 
9  wm_draw_window_offscreen              wm_draw.c              731  0x386dbe2 
10 wm_draw_window                        wm_draw.c              872  0x386e19b 
11 wm_draw_update                        wm_draw.c              1073 0x386e7d3 
12 WM_main                               wm.c                   641  0x386b1f1 
13 main                                  creator.c              522  0x32f3f82 
Caused by 33ac3582bb `me`->`edit_mesh`->`mesh_eval_final` is NULL ``` 1 DRW_mesh_batch_cache_create_requested draw_cache_impl_mesh.c 1331 0x3bc92c5 2 drw_batch_cache_generate_requested draw_cache.c 3583 0x3bb6fa9 3 drw_engines_cache_populate draw_manager.c 1091 0x3b4213b 4 DRW_draw_render_loop_ex draw_manager.c 1584 0x3b4359b 5 DRW_draw_view draw_manager.c 1491 0x3b43158 6 view3d_draw_view view3d_draw.c 1595 0x47e3d13 7 view3d_main_region_draw view3d_draw.c 1617 0x47e3dba 8 ED_region_do_draw area.c 546 0x411fb9f 9 wm_draw_window_offscreen wm_draw.c 731 0x386dbe2 10 wm_draw_window wm_draw.c 872 0x386e19b 11 wm_draw_update wm_draw.c 1073 0x386e7d3 12 WM_main wm.c 641 0x386b1f1 13 main creator.c 522 0x32f3f82 ```
Philipp Oeser changed title from Blender closes when changing mesh data block to Blender crashes when changing mesh data block and switching scenes 2020-11-24 15:10:01 +01:00
Campbell Barton self-assigned this 2021-01-06 14:47:10 +01:00

This issue was referenced by 552e02f731

This issue was referenced by 552e02f731afbf5b6cd55c8475ace6fbb2b229fb

This issue was referenced by 691c021679

This issue was referenced by 691c021679f6a2038536fcec0bdd7de654c79853

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82952
No description provided.