Fix T82952: Crash changing mesh data block and switching scenes

Regression in 33ac3582bbd5551bdfbc7ef8856640b5e61888f8.